# production-task-and-project-manager

./: .gitignore  .pre-commit-config.yaml  bandit.yml  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: code-check.yml
config/: settings.py
