[project]
name = "production-task-and-project-manager"
version = "0.1.0"
description = "Система управління задачами та проектами для виробничого обладнання"
dependencies = [
    "django",
    "psycopg2",
    "django-debug-toolbar",
    "django-widget-tweaks"
]

[tool.flake8]
max-line-length = 120
exclude = [".venv"]

[tool.ruff]
line-length = 120
exclude = [".venv"]
#extend-select = ["B", "C", "E", "F", "W"]

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.bandit]
skips = ["B101"]